--- a/emhass/translations/en.yaml
+++ b/emhass/translations/en.yaml
@@ -29,6 +29,9 @@ configuration:
   set_nocharge_from_grid:
     name: Set no charge from grid condition
     description: Set this to true if you want to forbidden to charge the battery from the grid. The battery will only be charged from excess PV.
+  load_forecast_method:
+    name: The load forecast method
+    description: This defaults to 'naive'. The available options are 'csv', 'list' or 'mlforecaster' to use the machine learning forecaster.
   sensor_power_photovoltaics:
     name: The Home Assistant sensor for PV power production
     description: This is the name of the photovoltaic produced power sensor in Watts from Home Assistant. For example sensor.power_photovoltaics.
