--- a/emhass/translations/en.yaml
+++ b/emhass/translations/en.yaml
@@ -53,12 +53,36 @@ configuration:
   load_forecast_method:
     name: The load forecast method
     description: This defaults to 'naive'. The available options are 'csv', 'list' or 'mlforecaster' to use the machine learning forecaster.
+  delta_forecast_daily: 
+    name:  The number of days for forecasted data
+    description: int number of days (1 day = delta_forecast_daily=1)
+  weather_forecast_method:
+    name:  Define the weather forecast method that will be used. (PV power production forecast)
+    description: The options are 'scrapper' (ClearOutside), 'Solcast', 'solar.forecast' and 'csv'. 
+  optional_solcast_api_key: 
+    name: solcast api key (For weather_forecast_method=solcast)
+    description: string value 
+  optional_solcast_rooftop_id:
+    name:  solcast rooftop id (For weather_forecast_method=solcast)
+    description: string  value
+  optional_solar_forecast_kwp:
+    name: The PV peak installed power in kW used for the 'solar.forecast' API call. (For weather_forecast_method=solar.forecast)
+    description: int value for PV peak installed power in KW (defult = 0)
+  load_cost_forecast_method:
+    name: Define the method that will be used for load cost forecast.
+    description:  The options are 'hp_hc_periods' for peak and non-peak hours contracts and 'csv' to load custom cost from CSV file.
   sensor_power_photovoltaics:
     name: The Home Assistant sensor for PV power production
     description: This is the name of the photovoltaic produced power sensor in Watts from Home Assistant. For example sensor.power_photovoltaics.
   sensor_power_load_no_var_loads:
     name: The Home Assistant sensor for the load power without the deferrable loads
     description: The name of the household power consumption sensor in Watts from Home Assistant. The deferrable loads that we will want to include in the optimization problem should be substracted from this sensor in HASS. For example sensor.power_load_no_var_loads.
+  load_negative: 
+    name: If the retrived load variable is negative by convention
+    description: Options are True or False
+  set_zero_min:
+    name: To give a special treatment for a minimum value saturation to zero for power consumption data. Values below zero are replaced by nans.
+    description: Options are True or False (to enable or disable)
   number_of_deferrable_loads:
     name: The number of deferrable loads
     description: Define the number of deferrable loads to consider. Defaults to 2.
@@ -75,14 +99,20 @@ configuration:
     name: This is a list of end hours of peak hours periods
     description: A list of hours in 24h HH:MM format.
   list_treat_deferrable_load_as_semi_cont:
-    name: A list to define if we should treat each deferrable load as a semi-continuous variable
+    name: Treat each deferrable load as a semi-continuous variable
     description: Semi-continuous variables are variables that can take either their nominal value or zero.
+  list_set_deferrable_load_single_constant:
+    name: Set each deferrable load as a constant fixed value variable with just one startup for each optimization task (ex. each 24h)
+    description: Options are True or False (to enable or disable)
   load_peak_hours_cost:
     name: The cost of the electrical energy during peak hours
     description: The cost of the electrical energy from the grid during peak hours in €/kWh. Defaults to 0.1907.
   load_offpeak_hours_cost:
     name: The cost of the electrical energy during non-peak hours
     description: The cost of the electrical energy from the grid during non-peak hours in €/kWh. Defaults to 0.1419.
+  production_price_forecast_method:
+    name: Define the method that will be used for PV power production price forecast. This is the price that is payed by the utility for energy injected to the grid.
+    description: options are 'constant' for constant fixed value or 'csv' to load custom price forecast from a CSV file 
   photovoltaic_production_sell_price:
     name: The paid price for energy injected to the grid 
     description: The paid price for energy injected to the grid from excedent PV production in €/kWh. Defaults to 0.065.
