en.yaml url example
relates to https://github.com/davidusb-geek/emhass/pull/210

--- a/emhass/translations/en.yaml
+++ b/emhass/translations/en.yaml
@@ -1,7 +1,7 @@
 configuration:
   hass_url:
     name: hass_url, The Home Assistant instance URL
-    description: (Default "empty"). Enter the URL of your Home Assistant instance. If using the supervisor you can leave this to the default "empty" value.
+    description: (Default "empty"). Enter the URL (Ex. http://localhost:8123/) of your Home Assistant instance. If using the supervisor you can leave this to the default "empty" value.
   long_lived_token:
     name: long_lived_token, A Long-Lived Access Token
     description: (Default "empty"). This can be created from the Lovelace profile page. If using the supervisor you can leave this to the default "empty" value.
