--- a/emhass/translations/en.yaml
+++ b/emhass/translations/en.yaml
@@ -115,16 +115,19 @@ configuration:
     description: A list of hours in 24h HH:MM format. (number of items = number_of_deferrable_loads)
   list_start_timesteps_of_each_deferrable_load:
     name: list_start_timesteps_of_each_deferrable_load, The timestep as from which each deferrable load is allowed to operate. Operation before this timestep is not allowed.
-    description: (Default 0). A list of elements. If value 0 is given, the deferrable load will be optimized as from the beginning of the complete prediction horizon window. (number of items = number_of_deferrable_loads)
+    description: "(Default start_timesteps_of_each_deferrable_load: 0). A list of elements. If value 0 is given, the deferrable load will be optimized as from the beginning of the complete prediction horizon window. (number of items = number_of_deferrable_loads)"
   list_end_timesteps_of_each_deferrable_load:
     name: list_end_timesteps_of_each_deferrable_load,The timestep before which each deferrable load should operate. Operation after this timestep is not allowed.
-    description: (Default 0). A list of elements. If value 0 is given, the deferrable load optimization window will extend up to the end of the prediction horizon window. (number of items = number_of_deferrable_loads)
+    description: "(Default end_timesteps_of_each_deferrable_load: 0). A list of elements. If value 0 is given, the deferrable load optimization window will extend up to the end of the prediction horizon window. (number of items = number_of_deferrable_loads)"
   list_treat_deferrable_load_as_semi_cont:
     name: list_treat_deferrable_load_as_semi_cont, Treat each deferrable load as a semi-continuous variable
-    description: "(Default treat_deferrable_load_as_semi_cont: true). Semi-continuous variables are variables that can take either their nominal value or zero."
+    description: "(Default treat_deferrable_load_as_semi_cont: true). Semi-continuous variables are variables that can take either their nominal value or zero. (number of items = number_of_deferrable_loads)"
   list_set_deferrable_load_single_constant:
-    name: list_set_deferrable_load_single_constant, Set each deferrable load as a constant fixed value variable with just one startup for each optimization task (ex. each 24h)
-    description: "(Default treat_deferrable_load_as_semi_cont: false). Options are True or False (to enable or disable)"
+    name: list_set_deferrable_load_single_constant, Set each deferrable load as a constant fixed value variable with just one startup for each optimization task (ex. each 24h) 
+    description: "(Default treat_deferrable_load_as_semi_cont: false). Options are True or False (to enable or disable) (number of items = number_of_deferrable_loads)"
+  list_set_deferrable_startup_penalty:
+    name: list_set_deferrable_startup_penalty, for each deferrable load, add a penalty P (Power) each time the deferrable load turns on. 
+    description: "(Default set_deferrable_startup_penalty: 0). The deferrable load turns on will incur an additional cost of P * list_nominal_power_of_deferrable_loads * cost_of_electricity at that time (number of items = number_of_deferrable_loads)"
   load_peak_hours_cost:
     name: load_peak_hours_cost, The cost of the electrical energy during peak hours
     description: (Default 0.1907). The cost of the electrical energy from the grid during peak hours in €/kWh.
