--- a/emhass/translations/en.yaml
+++ b/emhass/translations/en.yaml
@@ -10,7 +10,7 @@ configuration:
     description: logging_level (Default INFO) This sets the logger level. Change to WARNING or ERROR to reduce logging if needed.
   data_path:
     name: Set folder path where EMHASS data will be stored
-    description: data_path (Default default), selecting /data/ will store data in an enclosed folder, only assessable by the addon itself. Select /share/ to store data in the mounted share folder, accessible outside of the addon.
+    description: data_path (Default default), selecting /data/ will store data in an enclosed folder, only assessable by the addon itself. Select /share/emhass to store data in the mounted share folder, accessible outside of the addon.
   time_zone:
     name: The time zone of your system.
     description: time_zone, (Default Europe/Paris) this is automatically set if your are using the supervisor.
