--- a/emhass/translations/en.yaml
+++ b/emhass/translations/en.yaml
@@ -24,11 +24,17 @@ configuration:
     name: Your systems altitude
     description: Altitude, (Default 100.0) this is automatically set if your are using the supervisor.
   solcast_api_key:
-    name: optional_solcast_api_key, solcast api key
-    description: optional_solcast_api_key, solcast api key (weather_forecast_method=solcast)
+    name: Solcast API key
+    description: The Solcast API key (weather_forecast_method=solcast)
   solcast_rooftop_id:
-    name: optional_solcast_rooftop_id, solcast rooftop id
-    description: optional_solcast_rooftop_id, solcast rooftop id (weather_forecast_method=solcast)
+    name: Solcast rooftop ID
+    description: The Solcast rooftop ID (weather_forecast_method=solcast)
   solar_forecast_kwp:
-    name: optional_solar_forecast_kwp,int value for PV peak installed power in KW. (weather_forecast_method=solar.forecast)
-    description: optional_solar_forecast_kwp (Default 0). The PV peak installed power in kW used for the 'solar.forecast' API call
+    name: PV peak installed power in KW
+    description: The PV peak installed power in kW used for the 'solar.forecast' API call (weather_forecast_method=solar.forecast)
+  influxdb_username:
+    name: InfluxDB username
+    description: Username for authenticating with InfluxDB. Leave empty if no authentication is required.
+  influxdb_password:
+    name: InfluxDB password
+    description: Password for authenticating with InfluxDB. Leave empty if no authentication is required.
